--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,24 +5,39 @@
 <head>
     <title>Novel coVid-19 Situation Dashboard</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 </head>
 
 <body>
+<div class="container">
+    <h2>Novel Coronavirus (COVID-19) Situation</h2>
 
-<table>
-    <tr>
-        <th>Province/State</th>
-        <th>Country</th>
-        <th>Latest Reported Cases</th>
-    </tr>
-    <tr th:each="locationStat : ${locationStats}">
-        <td th:text="${locationStat.State}"></td>
-        <td th:text="${locationStat.country}"></td>
-        <td th:text="${locationStat.latestReport}">0</td>
-    </tr>
-</table>
+    <div class="jumbotron">
+        <h1 class="display-4" th:text="${totalReportedCases}"></h1>
+        <p class="lead">Total Cases Reported as of today.</p>
+        <hr class="my-4">
+        <p>
+            <span>Total New Cases Reported Since Yesterday</span>
+            <span th:text="${totalNewCases}"></span>
+        </p>
+    </div>
 
+    <table class="table">
+        <tr>
+            <th>Province/State</th>
+            <th>Country</th>
+            <th>Total Reported Cases</th>
+            <th>New Reported Cases since Yesterday</th>
+        </tr>
+        <tr th:each="locationStat : ${locationStats}">
+            <td th:text="${locationStat.State}"></td>
+            <td th:text="${locationStat.country}"></td>
+            <td th:text="${locationStat.latestReport}">0</td>
+            <td th:text="${locationStat.differenceFromPreviousDay}">0</td>
+        </tr>
+    </table>
+</div>
 
 </body>
 
